@@ -1,5 +1,7 @@
 Changelog for mk-parallel-dump:
 
+   * --ignoreengine worked only when --tab was specified (bug #1851461).
+
 2008-03-16: version 1.0.7
 
    * Added --setvars option (bug #1904689, bug #1911371).
